# flask-boilerplate

./: .gitignore  .mypy.ini  .travis.yml  Makefile  Pipfile  README.md  application.py  check.sh  monkey_type.py  pyproject.toml  run.sh  setup.cfg
app/: __init__.py  __meta__.py  config.py
app/commands/: __init__.py  messages.py
app/core/dtos/: tasks.py  users.py
app/core/entities/: authentication.py  tasks.py  users.py
app/core/repositories/: authentication.py  tasks.py  users.py
app/core/use_case_output/: __init__.py
app/core/use_case_outputs/: __init__.py  tasks.py
app/core/use_cases/: __init__.py  create_task.py  create_tasks.py  create_users.py  get_task.py  get_tasks.py  read_task.py  tasks.py  update_task.py  update_tasks.py
app/extensions/: __init__.py  database.py  injection.py  sql_client.py
app/extensions/messages/: consumer.py  producer.py
app/extensions/sql_client/: __init__.py
app/extensions/swagger/: __init__.py  builder.py
app/http/: __init__.py  exceptions.py  requests.py
core/: dto.py
core/dtos/: base.py
core/entities/: authentication.py  base.py  tasks.py  users.py
core/exceptions/: __init__.py
core/extensions/: rdb.py
core/helpers/: encrypt.py
core/messages/: consumer.py  producer.py
core/models/: authentication.py  base.py  task.py  user.py
core/repositories/: authentication.py  tasks.py  users.py
core/use_case_outputs/: __init__.py
core/use_cases/: __init__.py  create_tasks.py  create_users.py  get_tasks.py  output.py  update_tasks.py
docker/: Dockerfile  docker-compose.dev.yml
scripts/: check.sh  run.sh
tests/: conftest.py  monkey_type.py
tests/extensions/: test_ioc_container.py  test_ioc_containers.py
tests/helper/: request.py
(+84 files in other folders)
