[tool.poetry]
name = "flask-boilerplate"
version = "0.1.0"
description = ""
authors = ["ugabiga <ugabiga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "7.0"
flask = "1.1.1"
flask-sqlalchemy = "2.4.1"
gunicorn = "20.0.4"
itsdangerous = "1.1.0"
jinja2 = "2.10.1"
markupsafe = "1.1.1"
monkeytype = "19.5.0"
pathspec = "0.5.9"
pyyaml = "5.1.2"
retype = "19.9.0"
six = "1.12.0"
sqlalchemy = "1.3.8"
typed-ast = "1.4.0"
voluptuous = "0.11.7"
werkzeug = "0.16.0"
flasgger = "^0.9.4"
Marshmallow = "^3.5.0"
inject = "^4.1.2"
pytest-snail = "^0.1.0"
pydantic = "^1.6.1"
pyjwt = "^2.4.0"
kafka-python = "^2.0.2"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
isort = "^4.3.21"
flake8 = "^3.7.9"
mypy = "^0.782"
pytest-snail = "^0.1.0"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
